// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`deleteEndOfArray => detail 1`] = `
Array [
  Object {
    "pathname": "/",
    "scroll": 30,
  },
  Object {
    "pathname": "/list",
    "scroll": 80,
  },
  Object {
    "pathname": "/detail",
    "scroll": 0,
  },
]
`;

exports[`deleteEndOfArray => foo  1`] = `
Array [
  Object {
    "pathname": "/",
    "scroll": 30,
  },
  Object {
    "pathname": "/list",
    "scroll": 80,
  },
  Object {
    "pathname": "/detail",
    "scroll": 0,
  },
  Object {
    "pathname": "/foo",
    "scroll": 0,
  },
]
`;
